package communication;

import "physbam_vector_2d.proto";
import "physbam_range_2d.proto";

message PhysbamGrid2d {
    optional PhysbamVectorInt2d counts = 1;
    optional PhysbamRangeFloat2d domain = 2;
    optional PhysbamVectorFloat2d dx = 3;
    optional PhysbamVectorFloat2d one_over_dx = 4;
    optional PhysbamVectorInt2d numbers_of_cells = 5;
    optional float min_dx = 6;
    optional float MAC_offset = 7;
}
