package communication;

message PhysbamVectorInt2d {
    optional sint32 x = 1;
    optional sint32 y = 2;
}

message PhysbamVectorFloat2d {
    optional float x = 1;
    optional float y = 2;
}
