package communication;

import "physbam_vector_2d.proto";

message PhysbamRangeInt2d {
    optional PhysbamVectorInt2d min_corner = 1;
    optional PhysbamVectorInt2d max_corner = 2;
}

message PhysbamRangeFloat2d {
    optional PhysbamVectorFloat2d min_corner = 1;
    optional PhysbamVectorFloat2d max_corner = 2;
}
